# ChangeLog for sys-apps/pv
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pv/ChangeLog,v 1.15 2010/12/16 17:59:18 angelos Exp $

  16 Dec 2010; Christoph Mende <angelos@gentoo.org> pv-1.2.0.ebuild:
  Fixed SRC_URI

*pv-1.2.0 (14 Dec 2010)

  14 Dec 2010; Christoph Mende <angelos@gentoo.org> +pv-1.2.0.ebuild:
  Version bump

*pv-1.1.4-r1 (13 Dec 2010)

  13 Dec 2010; Diego E. Pettenò <flameeyes@gentoo.org> +pv-1.1.4-r1.ebuild:
  QA: update to EAPI 2, drop debug USE flag as it only changes CFLAGS, die on
  dodoc failure, use proper CC/LD so that cross-compile works. See bug #345933.

  31 Mar 2010; Raúl Porcel <armin76@gentoo.org> pv-1.1.4.ebuild:
  Add ~arm

  07 Jan 2010; Christian Faulhammer <fauli@gentoo.org> pv-1.1.4.ebuild:
  Transfer Prefix keywords

  05 Jun 2009; Jeroen Roovers <jer@gentoo.org> pv-1.1.4.ebuild:
  Stable for HPPA too.

  21 Feb 2009; Christoph Mende <angelos@gentoo.org> -pv-1.1.0.ebuild:
  Removed old

  16 Nov 2008; Jeroen Roovers <jer@gentoo.org> pv-1.1.4.ebuild:
  Marked ~hppa thanks to LuckyLuke.

  13 Jun 2008; Stephanie Lockwood-Childs <wormo@gentoo.org> pv-1.1.4.ebuild:
  stable on ppc (bug #225947)

  12 Jun 2008; Raúl Porcel <armin76@gentoo.org> pv-1.1.4.ebuild:
  alpha/sparc/x86 stable wrt #225947

  12 Jun 2008; Brent Baude <ranger@gentoo.org> pv-1.1.4.ebuild:
  stable ppc64, bug 225947

  11 Jun 2008; Christoph Mende <angelos@gentoo.org> pv-1.1.4.ebuild:
  Stable on amd64, bug #225947

*pv-1.1.4 (06 Mar 2008)

  06 Mar 2008; Christoph Mende <angelos@gentoo.org> +pv-1.1.4.ebuild:
  Version bump

  03 Oct 2007; Christoph Mende <angelos@gentoo.org>
  -files/pv-remove-doc-target.patch, -pv-0.9.6.ebuild, -pv-0.9.9.ebuild,
  -pv-1.0.1.ebuild:
  Cleanup

  03 Oct 2007; Raúl Porcel <armin76@gentoo.org> pv-1.1.0.ebuild:
  alpha stable wrt #194417

  03 Oct 2007; Tom Gall <tgall@gentoo.org> pv-1.1.0.ebuild:
  stable on ppc64
