@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST pv-1.1.4.tar.gz 92146 RMD160 ac0453e59f9f1d81cc40b55b8870871aa22f9f10 SHA1 2d84e212b543509b675351809d1e0257e679c5fa SHA256 fd43aea3ce9017499cc02c5b3237e0207140b17d6efaddc05fa8cc393c64a904
 DIST pv-1.2.0.tar.bz2 82222 RMD160 3dfb7dc65c2d8032d3db1dcce27b42cc9cc14540 SHA1 bb921bca55347a1b7c6f74ce6b70cff0325499d7 SHA256 e3291f6d32f9e8a8ab8489ed68669d7df61a6eea8a6a06e7bb26b0c3e3cdc666
 EBUILD pv-1.1.4-r1.ebuild 840 RMD160 7dd67634a96fade487749f4f08dbc905f302db9d SHA1 d38296f580085282cf8edbed0fbcde609a2c3e58 SHA256 5b104ad59e3394f25b1d9cafa55556b82f950d6ebe7205d4cd815e052c94c23e
 EBUILD pv-1.1.4.ebuild 775 RMD160 bd671f731377d0e9f430a92a201a494e771e7d57 SHA1 11004c324e78a98352e6630a09ede54b9a962718 SHA256 9980802a3f2fd3ca56128da709478a8a2aadd8817d7dca9d18d3e27b2295d827
-EBUILD pv-1.2.0.ebuild 843 RMD160 2c0f0511e0cf8fefd4c44ed5013e72b54cfe017c SHA1 ed1e85df5f74deebabde635c4f4f1cdb4e394545 SHA256 375a7ebe90df1b81cce22016c9355b8589831d67e37ca8db93d6f88b0537900d
-MISC ChangeLog 5351 RMD160 040a9cfa69b821fc402f95b428df88abd5d3c409 SHA1 d7fa1c0da5c2be005d8b9a2a86895cf693f51c46 SHA256 d0cc0db65af48d3cb02ea1d4f310fe550389788580cd0ab699be903fbf7a5d8c
+EBUILD pv-1.2.0.ebuild 843 RMD160 d2a8de392310e3385cb7b89e7201b9270b911542 SHA1 a78f099bb7ef8cb8465930afbf74d3ab1b23491c SHA256 623587607bdb9086e77ec1970f37754a3d5027061e18b89c4e74b02aaaf93f2a
+MISC ChangeLog 5457 RMD160 8b4fe463101941ef229de3e9f51a8fc64946cb23 SHA1 01b412b5315f7067ea31f0092e5e36133139857f SHA256 937ec6c3e86ee4384e4dfd7aa2cdc159009405a222bc6c94df270a162e497da4
 MISC metadata.xml 255 RMD160 71a3c06a4dd86a63ed892a280508706c6f71e9a1 SHA1 de37d6a433efd9af05c99ed0f5aa152fba099ee6 SHA256 f243435638a30f395a46fc923f69c95610220826bc328d1e42b1c031cd4eb38d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBCgAGBQJNY/IkAAoJEPqDWhW0r/LCgjYP/0pk5T6CFeUgwVz4XdfKXvs5
+qAik6N/jyLPSvSWe3r3Xj81DJcWswGKr1rAuTax/bgdn3ByTDw/wfD0qf+IC7QXj
+p0ASG+PkC1V2HeJYyPKwOeDGgZ9RjxVX+dEfofww6kSBM/CgcSXN/h0+pqYlNJuM
+oabX1FYp42xAmmgMudg4htUOtvxF4XXmvGDhXOqAUMXzNrA5YLtEXB6yO2zIE//w
+CKKziljqATPqSmCpuEENH1g4IDRGBdQYoOLGqhyVAwgAEIMM+qLbCsIx9cRxxHJ2
+4qZjXUptj74mNrVQeDgPtvwFhfV01JCZUvnIjDA5kaV8xEbVb0HTc3K+JmHj+nIQ
+e3mBn2bcUD9eLQwKlMiiLMtB7m/TW/XvgxD8FkCUHriyT5jM3T2+IBxi2byzG5M7
+5PlCRYE7/27pugeTnRKoKB2uxaObKOK9KGT2BLDB1zDHlaQlaR3PCC7KqT/vy4lz
+NdqmCTCCn1/j/8XCW/hJmWC8WzeepI5IVYqdRFfVupB37WVOWBiU1TJI0z1tJs1v
+clzze0RI+3psUSI8MqdifQDwutroZvkFy0MuhlJd361ABeWiMjZ6TWJHqa+E3YJE
+rMdztmKc0ixrxtWlZ/F1Blmv+nkX69Dw4P280/F4YjPCLkIuUd0/FtS9MJ15jJ1P
+zk3SXSZIMdKhz6yeeGHC
+=WNlY
+-----END PGP SIGNATURE-----
