@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pv
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pv/ChangeLog,v 1.15 2010/12/16 17:59:18 angelos Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pv/ChangeLog,v 1.16 2011/02/22 17:31:41 hwoarang Exp $
+
+  22 Feb 2011; Markos Chandras <hwoarang@gentoo.org> pv-1.2.0.ebuild:
+  Stable on amd64 wrt bug #355911
 
   16 Dec 2010; Christoph Mende <angelos@gentoo.org> pv-1.2.0.ebuild:
   Fixed SRC_URI
